Allow segment to be in more than one natural class for syllabification; improve Eclipse classpath

--- a/test/sil/org/syllableparser/testData/CVApproachLanguageComparisonHTMLEnglish.html
+++ b/test/sil/org/syllableparser/testData/CVApproachLanguageComparisonHTMLEnglish.html
@@ -121,6 +121,10 @@
 <td class="analysis1">N (<span class="vernacular1">m, n, ɲ</span>)</td>
 <td class="analysis2">&#xa0;</td>
 </tr>
+<tr>
+<td class="analysis1">V+hi (<span class="vernacular1">i, u</span>)</td>
+<td class="analysis2">&#xa0;</td>
+</tr>
 </tbody>
 </table>
 <h3>Syllable Patterns</h3>
@@ -135,6 +139,10 @@
 <tbody>
 <tr>
 <td class="analysis1">#CCV (#, C, C, V)</td>
+<td class="analysis2">&#xa0;</td>
+</tr>
+<tr>
+<td class="analysis1">#CCV+hiC# (#, C, C, V+hi, C, #)</td>
 <td class="analysis2">&#xa0;</td>
 </tr>
 <tr>
@@ -202,6 +210,10 @@
 </tr>
 <tr>
 <td class="analysis1">NV (N, V)</td>
+<td class="analysis2">&#xa0;</td>
+</tr>
+<tr>
+<td class="analysis1">#CCV+hiC# (#, C, C, V+hi, C, #)</td>
 <td class="analysis2">&#xa0;</td>
 </tr>
 </tbody>
