Make comparison tests work on Linux and Mac

--- a/test/sil/org/syllableparser/testData/CVApproachLanguageComparisonHTMLSpanish.html
+++ b/test/sil/org/syllableparser/testData/CVApproachLanguageComparisonHTMLSpanish.html
@@ -27,8 +27,8 @@
 </head>
 <body>
 <h2>Comparación del CV Approach entre</h2>
-<ol><li>test\sil\org\syllableparser\testData\CVTestData.ashedata</li>
-<li>test\sil\org\syllableparser\testData\CVTestData2.ashedata</li>
+<ol><li>test/sil/org/syllableparser/testData/CVTestData.ashedata</li>
+<li>test/sil/org/syllableparser/testData/CVTestData2.ashedata</li>
 </ol>
 <div>Presentado en 9 de abril de 2016 8:07</div>
 <h3>Inventorio de segmentos</h3>
