--- a/test/sil/org/syllableparser/testData/CVApproachLanguageComparisonHTMLEnglish.html
+++ b/test/sil/org/syllableparser/testData/CVApproachLanguageComparisonHTMLEnglish.html
@@ -27,8 +27,8 @@
 </head>
 <body>
 <h2>CV Approach Comparison between:</h2>
-<ol><li>test\sil\org\syllableparser\testData\CVTestData.ashedata</li>
-<li>test\sil\org\syllableparser\testData\CVTestData2.ashedata</li>
+<ol><li>test/sil/org/syllableparser/testData/CVTestData.ashedata</li>
+<li>test/sil/org/syllableparser/testData/CVTestData2.ashedata</li>
 </ol>
 <div>Performed on April 9, 2016 8:07 AM</div>
 <h3>Segment Inventory</h3>
