Fix bug: empty CV syllable pattern caused infinite loop when syllabifying.

--- a/test/sil/org/syllableparser/testData/CVApproachLanguageComparisonHTMLSpanish.html
+++ b/test/sil/org/syllableparser/testData/CVApproachLanguageComparisonHTMLSpanish.html
@@ -173,6 +173,10 @@
 <td class="analysis1">&#xa0;</td>
 <td class="analysis2">VC (V, C)</td>
 </tr>
+<tr>
+<td class="analysis1">empty ()</td>
+<td class="analysis2">&#xa0;</td>
+</tr>
 </tbody>
 </table>
 <p>El orden de los patrones de sílaba se muestra a continuación.</p>
@@ -214,6 +218,10 @@
 </tr>
 <tr>
 <td class="analysis1">#CCV+hiC# (#, C, C, V+hi, C, #)</td>
+<td class="analysis2">&#xa0;</td>
+</tr>
+<tr>
+<td class="analysis1">empty ()</td>
 <td class="analysis2">&#xa0;</td>
 </tr>
 </tbody>
