--- a/test/sil/org/syllableparser/testData/CVApproachLanguageComparisonHTMLEnglish.html
+++ b/test/sil/org/syllableparser/testData/CVApproachLanguageComparisonHTMLEnglish.html
@@ -110,7 +110,7 @@
 <td class="analysis2">&#xa0;</td>
 </tr>
 <tr>
-<td class="analysis1">C (<span class="vernacular1">b, ch, d, f, g, h, k, l, p, s, sh, t, v, w, x, y, z, N</span>)</td>
+<td class="analysis1">C (<span class="vernacular1">b, ch, d, f, g, h, k, p, s, sh, t, v, w, x, y, z, S</span>)</td>
 <td class="analysis2">C (<span class="vernacular2">', b, c, ch, d, f, g, h, j, k, kw, ky, l, m, n, ñ, p, q, r, s, sh, t, ts, v, w, x, y, z</span>)</td>
 </tr>
 <tr>
@@ -119,6 +119,10 @@
 </tr>
 <tr>
 <td class="analysis1">N (<span class="vernacular1">m, n, ɲ</span>)</td>
+<td class="analysis2">&#xa0;</td>
+</tr>
+<tr>
+<td class="analysis1">S (<span class="vernacular1">l, N</span>)</td>
 <td class="analysis2">&#xa0;</td>
 </tr>
 <tr>
@@ -193,11 +197,11 @@
 <td class="analysis2">CV (C, v)</td>
 </tr>
 <tr>
-<td class="analysis1">CVC (C, V, C)</td>
+<td class="analysis1">CVN (C, V, N)</td>
 <td class="analysis2">CVC (C, V, C)</td>
 </tr>
 <tr>
-<td class="analysis1">CVN (C, V, N)</td>
+<td class="analysis1">CVC (C, V, C)</td>
 <td class="analysis2">V (V)</td>
 </tr>
 <tr>
