Initial attempt to move toward using environments in segmenting

--- a/test/sil/org/syllableparser/testData/CVApproachLanguageComparisonHTMLEnglish.html
+++ b/test/sil/org/syllableparser/testData/CVApproachLanguageComparisonHTMLEnglish.html
@@ -129,6 +129,10 @@
 <td class="analysis1">V+hi (<span class="vernacular1">i, u</span>)</td>
 <td class="analysis2">&#xa0;</td>
 </tr>
+<tr>
+<td class="analysis1">[+lab, +vd] (<span class="vernacular1">b, m</span>)</td>
+<td class="analysis2">&#xa0;</td>
+</tr>
 </tbody>
 </table>
 <h3>Syllable Patterns</h3>
