--- a/test/sil/org/syllableparser/testData/CVApproachLanguageComparisonHTMLSpanish.html
+++ b/test/sil/org/syllableparser/testData/CVApproachLanguageComparisonHTMLSpanish.html
@@ -110,7 +110,7 @@
 <td class="analysis2">&#xa0;</td>
 </tr>
 <tr>
-<td class="analysis1">C (<span class="vernacular1">b, ch, d, f, g, h, k, p, s, sh, t, v, w, x, y, z, S</span>)</td>
+<td class="analysis1">C (<span class="vernacular1">b, ch, d, f, g, h, k, p, s, sh, t, v, w, x, y, z, [S]</span>)</td>
 <td class="analysis2">C (<span class="vernacular2">', b, c, ch, d, f, g, h, j, k, kw, ky, l, m, n, ñ, p, q, r, s, sh, t, ts, v, w, x, y, z</span>)</td>
 </tr>
 <tr>
@@ -122,7 +122,7 @@
 <td class="analysis2">&#xa0;</td>
 </tr>
 <tr>
-<td class="analysis1">S (<span class="vernacular1">l, N</span>)</td>
+<td class="analysis1">S (<span class="vernacular1">l, [N]</span>)</td>
 <td class="analysis2">&#xa0;</td>
 </tr>
 <tr>
