Add comparison of new graphemes, grapheme natural classes, and environments

--- a/test/sil/org/syllableparser/testData/CVApproachLanguageComparisonHTMLEnglish.html
+++ b/test/sil/org/syllableparser/testData/CVApproachLanguageComparisonHTMLEnglish.html
@@ -42,55 +42,681 @@
 </thead>
 <tbody>
 <tr>
+<td class="vernacular1" valign="top">&#xa0;</td>
+<td class="vernacular2" valign="top"><table border="1">
+<thead>
+<tr>
+<th>Segment</th>
+<th>Graphemes</th>
+<th>Environments</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td rowspan="1" valign="top">'<td>'</td>
+<td></td>
+</tr>
+</tbody>
+</table>
+</td>
+</tr>
+<tr>
+<td class="vernacular1" valign="top"><table border="1">
+<thead>
+<tr>
+<th>Segment</th>
+<th>Graphemes</th>
+<th>Environments</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td rowspan="2" valign="top">a<td>a</td>
+<td></td>
+</tr>
+<tr>
+<td>A</td>
+<td></td>
+</tr>
+</tbody>
+</table>
+</td>
+<td class="vernacular2" valign="top"><table border="1">
+<thead>
+<tr>
+<th>Segment</th>
+<th>Graphemes</th>
+<th>Environments</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td rowspan="4" valign="top">a<td>a</td>
+<td></td>
+</tr>
+<tr>
+<td>A</td>
+<td></td>
+</tr>
+<tr>
+<td>á</td>
+<td></td>
+</tr>
+<tr>
+<td>Á</td>
+<td></td>
+</tr>
+</tbody>
+</table>
+</td>
+</tr>
+<tr>
+<td class="vernacular1" valign="top">&#xa0;</td>
+<td class="vernacular2" valign="top"><table border="1">
+<thead>
+<tr>
+<th>Segment</th>
+<th>Graphemes</th>
+<th>Environments</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td rowspan="2" valign="top">c<td>c</td>
+<td></td>
+</tr>
+<tr>
+<td>C</td>
+<td></td>
+</tr>
+</tbody>
+</table>
+</td>
+</tr>
+<tr>
+<td class="vernacular1" valign="top"><table border="1">
+<thead>
+<tr>
+<th>Segment</th>
+<th>Graphemes</th>
+<th>Environments</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td rowspan="3" valign="top">ch<td>ch</td>
+<td></td>
+</tr>
+<tr>
+<td>Ch</td>
+<td></td>
+</tr>
+<tr>
+<td>CH</td>
+<td></td>
+</tr>
+</tbody>
+</table>
+</td>
+<td class="vernacular2" valign="top"><table border="1">
+<thead>
+<tr>
+<th>Segment</th>
+<th>Graphemes</th>
+<th>Environments</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td rowspan="2" valign="top">ch<td>ch</td>
+<td></td>
+</tr>
+<tr>
+<td>Chr</td>
+<td></td>
+</tr>
+</tbody>
+</table>
+</td>
+</tr>
+<tr>
+<td class="vernacular1" valign="top"><table border="1">
+<thead>
+<tr>
+<th>Segment</th>
+<th>Graphemes</th>
+<th>Environments</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td rowspan="2" valign="top">e<td>e</td>
+<td></td>
+</tr>
+<tr>
+<td>E</td>
+<td></td>
+</tr>
+</tbody>
+</table>
+</td>
+<td class="vernacular2" valign="top"><table border="1">
+<thead>
+<tr>
+<th>Segment</th>
+<th>Graphemes</th>
+<th>Environments</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td rowspan="4" valign="top">e<td>e</td>
+<td></td>
+</tr>
+<tr>
+<td>E</td>
+<td></td>
+</tr>
+<tr>
+<td>é</td>
+<td></td>
+</tr>
+<tr>
+<td>É</td>
+<td></td>
+</tr>
+</tbody>
+</table>
+</td>
+</tr>
+<tr>
+<td class="vernacular1" valign="top"><table border="1">
+<thead>
+<tr>
+<th>Segment</th>
+<th>Graphemes</th>
+<th>Environments</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td rowspan="2" valign="top">h<td>h</td>
+<td>/ # _  ; /  [Non-s] _  </td>
+</tr>
+<tr>
+<td>H</td>
+<td></td>
+</tr>
+</tbody>
+</table>
+</td>
+<td class="vernacular2" valign="top"><table border="1">
+<thead>
+<tr>
+<th>Segment</th>
+<th>Graphemes</th>
+<th>Environments</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td rowspan="2" valign="top">h<td>h</td>
+<td>/ #  _  </td>
+</tr>
+<tr>
+<td>H</td>
+<td></td>
+</tr>
+</tbody>
+</table>
+</td>
+</tr>
+<tr>
+<td class="vernacular1" valign="top"><table border="1">
+<thead>
+<tr>
+<th>Segment</th>
+<th>Graphemes</th>
+<th>Environments</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td rowspan="2" valign="top">i<td>i</td>
+<td></td>
+</tr>
+<tr>
+<td>I</td>
+<td></td>
+</tr>
+</tbody>
+</table>
+</td>
+<td class="vernacular2" valign="top"><table border="1">
+<thead>
+<tr>
+<th>Segment</th>
+<th>Graphemes</th>
+<th>Environments</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td rowspan="4" valign="top">i<td>i</td>
+<td></td>
+</tr>
+<tr>
+<td>I</td>
+<td></td>
+</tr>
+<tr>
+<td>í</td>
+<td></td>
+</tr>
+<tr>
+<td>Í</td>
+<td></td>
+</tr>
+</tbody>
+</table>
+</td>
+</tr>
+<tr>
+<td class="vernacular1" valign="top">&#xa0;</td>
+<td class="vernacular2" valign="top"><table border="1">
+<thead>
+<tr>
+<th>Segment</th>
+<th>Graphemes</th>
+<th>Environments</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td rowspan="2" valign="top">j<td>j</td>
+<td></td>
+</tr>
+<tr>
+<td>J</td>
+<td></td>
+</tr>
+</tbody>
+</table>
+</td>
+</tr>
+<tr>
+<td class="vernacular1" valign="top">&#xa0;</td>
+<td class="vernacular2" valign="top"><table border="1">
+<thead>
+<tr>
+<th>Segment</th>
+<th>Graphemes</th>
+<th>Environments</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td rowspan="3" valign="top">kw<td>kw</td>
+<td></td>
+</tr>
+<tr>
+<td>Kw</td>
+<td></td>
+</tr>
+<tr>
+<td>KW</td>
+<td></td>
+</tr>
+</tbody>
+</table>
+</td>
+</tr>
+<tr>
+<td class="vernacular1" valign="top">&#xa0;</td>
+<td class="vernacular2" valign="top"><table border="1">
+<thead>
+<tr>
+<th>Segment</th>
+<th>Graphemes</th>
+<th>Environments</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td rowspan="3" valign="top">ky<td>ky</td>
+<td></td>
+</tr>
+<tr>
+<td>Ky</td>
+<td></td>
+</tr>
+<tr>
+<td>KY</td>
+<td></td>
+</tr>
+</tbody>
+</table>
+</td>
+</tr>
+<tr>
+<td class="vernacular1" valign="top"><table border="1">
+<thead>
+<tr>
+<th>Segment</th>
+<th>Graphemes</th>
+<th>Environments</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td rowspan="2" valign="top">o<td>o</td>
+<td></td>
+</tr>
+<tr>
+<td>O</td>
+<td></td>
+</tr>
+</tbody>
+</table>
+</td>
+<td class="vernacular2" valign="top"><table border="1">
+<thead>
+<tr>
+<th>Segment</th>
+<th>Graphemes</th>
+<th>Environments</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td rowspan="4" valign="top">o<td>o</td>
+<td></td>
+</tr>
+<tr>
+<td>O</td>
+<td></td>
+</tr>
+<tr>
+<td>ó</td>
+<td></td>
+</tr>
+<tr>
+<td>Ó</td>
+<td></td>
+</tr>
+</tbody>
+</table>
+</td>
+</tr>
+<tr>
+<td class="vernacular1" valign="top"><table border="1">
+<thead>
+<tr>
+<th>Segment</th>
+<th>Graphemes</th>
+<th>Environments</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td rowspan="3" valign="top">sh<td>sh</td>
+<td>/  _  i</td>
+</tr>
+<tr>
+<td>Sh</td>
+<td>/ # _  </td>
+</tr>
+<tr>
+<td>SH</td>
+<td></td>
+</tr>
+</tbody>
+</table>
+</td>
+<td class="vernacular2" valign="top"><table border="1">
+<thead>
+<tr>
+<th>Segment</th>
+<th>Graphemes</th>
+<th>Environments</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td rowspan="3" valign="top">sh<td>sh</td>
+<td></td>
+</tr>
+<tr>
+<td>Sh</td>
+<td></td>
+</tr>
+<tr>
+<td>SH</td>
+<td></td>
+</tr>
+</tbody>
+</table>
+</td>
+</tr>
+<tr>
+<td class="vernacular1" valign="top">&#xa0;</td>
+<td class="vernacular2" valign="top"><table border="1">
+<thead>
+<tr>
+<th>Segment</th>
+<th>Graphemes</th>
+<th>Environments</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td rowspan="3" valign="top">ts<td>ts</td>
+<td></td>
+</tr>
+<tr>
+<td>Ts</td>
+<td></td>
+</tr>
+<tr>
+<td>TS</td>
+<td></td>
+</tr>
+</tbody>
+</table>
+</td>
+</tr>
+<tr>
+<td class="vernacular1" valign="top"><table border="1">
+<thead>
+<tr>
+<th>Segment</th>
+<th>Graphemes</th>
+<th>Environments</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td rowspan="2" valign="top">u<td>u</td>
+<td></td>
+</tr>
+<tr>
+<td>U</td>
+<td></td>
+</tr>
+</tbody>
+</table>
+</td>
+<td class="vernacular2" valign="top"><table border="1">
+<thead>
+<tr>
+<th>Segment</th>
+<th>Graphemes</th>
+<th>Environments</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td rowspan="4" valign="top">u<td>u</td>
+<td></td>
+</tr>
+<tr>
+<td>U</td>
+<td></td>
+</tr>
+<tr>
+<td>ú</td>
+<td></td>
+</tr>
+<tr>
+<td>Ú</td>
+<td></td>
+</tr>
+</tbody>
+</table>
+</td>
+</tr>
+<tr>
+<td class="vernacular1" valign="top"><table border="1">
+<thead>
+<tr>
+<th>Segment</th>
+<th>Graphemes</th>
+<th>Environments</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td rowspan="2" valign="top">x<td>x</td>
+<td>/ [V] _ [V] </td>
+</tr>
+<tr>
+<td>X</td>
+<td></td>
+</tr>
+</tbody>
+</table>
+</td>
+<td class="vernacular2" valign="top"><table border="1">
+<thead>
+<tr>
+<th>Segment</th>
+<th>Graphemes</th>
+<th>Environments</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td rowspan="2" valign="top">x<td>x</td>
+<td></td>
+</tr>
+<tr>
+<td>X</td>
+<td></td>
+</tr>
+</tbody>
+</table>
+</td>
+</tr>
+<tr>
+<td class="vernacular1" valign="top">&#xa0;</td>
+<td class="vernacular2" valign="top"><table border="1">
+<thead>
+<tr>
+<th>Segment</th>
+<th>Graphemes</th>
+<th>Environments</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td rowspan="2" valign="top">ñ<td>ñ</td>
+<td></td>
+</tr>
+<tr>
+<td>Ñ</td>
+<td></td>
+</tr>
+</tbody>
+</table>
+</td>
+</tr>
+<tr>
+<td class="vernacular1" valign="top"><table border="1">
+<thead>
+<tr>
+<th>Segment</th>
+<th>Graphemes</th>
+<th>Environments</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td rowspan="2" valign="top">ɲ<td>ñ</td>
+<td></td>
+</tr>
+<tr>
+<td>Ñ</td>
+<td></td>
+</tr>
+</tbody>
+</table>
+</td>
+<td class="vernacular2" valign="top">&#xa0;</td>
+</tr>
+</tbody>
+</table>
+<h3>Grapheme Natural Classes</h3>
+<p>The following grapheme natural classes differ between the two.</p>
+<table border="1">
+<thead>
+<tr>
+<th>First</th>
+<th>Second</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td class="vernacular1">a, A, b, B, ch, Ch, CH, d, D, e, E, f, F, g, G, h, H, i, I, k, K, l, L, m, M, n, N, o, O, p, P, q, Q, r, R, sh, Sh, SH, t, T, u, U, v, V, w, W, x, X, y, Y, z, Z, ñ, Ñ</td>
+<td class="vernacular2">&#xa0;</td>
+</tr>
+<tr>
+<td class="vernacular1">a, e, E, i, I, o, O, U</td>
+<td class="vernacular2">&#xa0;</td>
+</tr>
+<tr>
+<td class="vernacular1">u, [V]</td>
+<td class="vernacular2">&#xa0;</td>
+</tr>
+</tbody>
+</table>
+<h3>Environments</h3>
+<p>The following environments differ between the two.</p>
+<table border="1">
+<thead>
+<tr>
+<th>First</th>
+<th>Second</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td class="vernacular1">/  [Non-s] _  </td>
+<td class="vernacular2">&#xa0;</td>
+</tr>
+<tr>
+<td class="vernacular1">/  _  i</td>
+<td class="vernacular2">&#xa0;</td>
+</tr>
+<tr>
 <td class="vernacular1">&#xa0;</td>
-<td class="vernacular2">' (')</td>
+<td class="vernacular2">/ #  _  </td>
 </tr>
 <tr>
-<td class="vernacular1">a (a A)</td>
-<td class="vernacular2">a (a A á Á)</td>
+<td class="vernacular1">/ # _  </td>
+<td class="vernacular2">&#xa0;</td>
 </tr>
 <tr>
-<td class="vernacular1">&#xa0;</td>
-<td class="vernacular2">c (c C)</td>
-</tr>
-<tr>
-<td class="vernacular1">e (e E)</td>
-<td class="vernacular2">e (e E é É)</td>
-</tr>
-<tr>
-<td class="vernacular1">i (i I)</td>
-<td class="vernacular2">i (i I í Í)</td>
-</tr>
-<tr>
-<td class="vernacular1">&#xa0;</td>
-<td class="vernacular2">j (j J)</td>
-</tr>
-<tr>
-<td class="vernacular1">&#xa0;</td>
-<td class="vernacular2">kw (kw Kw KW)</td>
-</tr>
-<tr>
-<td class="vernacular1">&#xa0;</td>
-<td class="vernacular2">ky (ky Ky KY)</td>
-</tr>
-<tr>
-<td class="vernacular1">o (o O)</td>
-<td class="vernacular2">o (o O ó Ó)</td>
-</tr>
-<tr>
-<td class="vernacular1">&#xa0;</td>
-<td class="vernacular2">ts (ts Ts TS)</td>
-</tr>
-<tr>
-<td class="vernacular1">u (u U)</td>
-<td class="vernacular2">u (u U ú Ú)</td>
-</tr>
-<tr>
-<td class="vernacular1">&#xa0;</td>
-<td class="vernacular2">ñ (ñ Ñ)</td>
-</tr>
-<tr>
-<td class="vernacular1">ɲ (ñ Ñ)</td>
+<td class="vernacular1">/ [V] _ [V] </td>
 <td class="vernacular2">&#xa0;</td>
 </tr>
 </tbody>
