--- a/test/sil/org/syllableparser/testData/CVApproachLanguageComparisonSameHTMLSpanish.html
+++ b/test/sil/org/syllableparser/testData/CVApproachLanguageComparisonSameHTMLSpanish.html
@@ -33,6 +33,10 @@
 <div>Presentado en 9 de abril de 2016 8:07</div>
 <h3>Inventorio de segmentos</h3>
 <p>Ambos tienen el mismo inventario segmento.</p>
+<h3>Clases Naturales de Grafemas</h3>
+<p>Ambos tienen las mismas clases naturales de grafemas.</p>
+<h3>Entornos</h3>
+<p>Ambos tienen los mismos entornos.</p>
 <h3>Clases Naturales</h3>
 <p>Ambos tienen las mismas clases naturales.</p>
 <h3>Patrones de Sílibas</h3>
