Only use active items when comparing

--- a/test/sil/org/syllableparser/testData/CVApproachLanguageComparisonHTMLEnglish.html
+++ b/test/sil/org/syllableparser/testData/CVApproachLanguageComparisonHTMLEnglish.html
@@ -449,6 +449,29 @@
 </td>
 </tr>
 <tr>
+<td class="vernacular1" valign="top">&#xa0;</td>
+<td class="vernacular2" valign="top"><table border="1">
+<thead>
+<tr>
+<th>Segment</th>
+<th>Graphemes</th>
+<th>Environments</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td rowspan="2" valign="top">q<td>q</td>
+<td></td>
+</tr>
+<tr>
+<td>Q</td>
+<td></td>
+</tr>
+</tbody>
+</table>
+</td>
+</tr>
+<tr>
 <td class="vernacular1" valign="top"><table border="1">
 <thead>
 <tr>
@@ -732,10 +755,6 @@
 </thead>
 <tbody>
 <tr>
-<td class="analysis1">Af (<span class="vernacular1">ch, sh</span>)</td>
-<td class="analysis2">&#xa0;</td>
-</tr>
-<tr>
 <td class="analysis1">C (<span class="vernacular1">b, ch, d, f, g, h, k, p, s, sh, t, v, w, x, y, z, [S]</span>)</td>
 <td class="analysis2">C (<span class="vernacular2">', b, c, ch, d, f, g, h, j, k, kw, ky, l, m, n, ñ, p, q, r, s, sh, t, ts, v, w, x, y, z</span>)</td>
 </tr>
@@ -796,20 +815,12 @@
 <td class="analysis2">&#xa0;</td>
 </tr>
 <tr>
-<td class="analysis1">NV (N, V)</td>
-<td class="analysis2">&#xa0;</td>
-</tr>
-<tr>
 <td class="analysis1">&#xa0;</td>
 <td class="analysis2">V (V)</td>
 </tr>
 <tr>
 <td class="analysis1">&#xa0;</td>
 <td class="analysis2">VC (V, C)</td>
-</tr>
-<tr>
-<td class="analysis1">empty ()</td>
-<td class="analysis2">&#xa0;</td>
 </tr>
 </tbody>
 </table>
