--- a/test/sil/org/syllableparser/testData/CVApproachLanguageComparisonHTMLSpanish.html
+++ b/test/sil/org/syllableparser/testData/CVApproachLanguageComparisonHTMLSpanish.html
@@ -699,15 +699,15 @@
 </thead>
 <tbody>
 <tr>
-<td class="vernacular1">a, A, b, B, ch, Ch, CH, d, D, e, E, f, F, g, G, h, H, i, I, k, K, l, L, m, M, n, N, o, O, p, P, q, Q, r, R, sh, Sh, SH, t, T, u, U, v, V, w, W, x, X, y, Y, z, Z, ñ, Ñ</td>
+<td class="vernacular1">Non-s (a, A, b, B, ch, Ch, CH, d, D, e, E, f, F, g, G, h, H, i, I, k, K, l, L, m, M, n, N, o, O, p, P, q, Q, r, R, sh, Sh, SH, t, T, u, U, v, V, w, W, x, X, y, Y, z, Z, ñ, Ñ)</td>
 <td class="vernacular2">&#xa0;</td>
 </tr>
 <tr>
-<td class="vernacular1">a, e, E, i, I, o, O, U</td>
+<td class="vernacular1">V (a, e, E, i, I, o, O, U)</td>
 <td class="vernacular2">&#xa0;</td>
 </tr>
 <tr>
-<td class="vernacular1">u, [V]</td>
+<td class="vernacular1">uV (u, [V])</td>
 <td class="vernacular2">&#xa0;</td>
 </tr>
 </tbody>
