Fix bug in SH: initial segment not in any natural class still parses

--- a/test/org/sil/syllableparser/testData/SHApproachLanguageComparisonHTMLSpanish.html
+++ b/test/org/sil/syllableparser/testData/SHApproachLanguageComparisonHTMLSpanish.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-<title>Comparación del SH Approach</title>
+<title>Comparación del enfoque de jerarquía de sonoridad</title>
 <style type="text/css">
 .analysis1 {
 	font-family:System;
@@ -26,7 +26,7 @@
 </style>
 </head>
 <body>
-<h2>Comparación del SH Approach entre</h2>
+<h2>Comparación del enfoque de jerarquía de sonoridad entre</h2>
 <ol><li>test/org/sil/syllableparser/testData/CVTestData.ashedata</li>
 <li>test/org/sil/syllableparser/testData/CVTestData2.ashedata</li>
 </ol>
@@ -744,7 +744,7 @@
 </tr>
 </tbody>
 </table>
-<h3>Sonority Hierarchy</h3>
+<h3>Jerarquía de sonoridad</h3>
 <p>Las siguientes clases naturales difieren entre los dos.</p>
 <table border="1">
 <thead>
@@ -764,7 +764,7 @@
 </tr>
 </tbody>
 </table>
-<p>The order of the sonority hierarchy is shown below.</p>
+<p>El orden de la jerarquía de sonoridad se muestra a continuación.</p>
 <table border="1">
 <thead>
 <tr>
