--- a/test/org/sil/syllableparser/testData/SyllabificationComparisonHTMLSpanish.html
+++ b/test/org/sil/syllableparser/testData/SyllabificationComparisonHTMLSpanish.html
@@ -34,7 +34,7 @@
 <thead>
 <tr>
 <th>Patrón del CV</th>
-<th>Sonority Hierarchy</th>
+<th>Jerarquía de sonoridad</th>
 <th>Silabeo</th>
 </tr>
 </thead>
