--- a/test/org/sil/syllableparser/testData/SHApproachLanguageComparisonSameHTMLSpanish.html
+++ b/test/org/sil/syllableparser/testData/SHApproachLanguageComparisonSameHTMLSpanish.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-<title>Comparación del SH Approach</title>
+<title>Comparación del enfoque de jerarquía de sonoridad</title>
 <style type="text/css">
 .analysis1 {
 	font-family:System;
@@ -26,7 +26,7 @@
 </style>
 </head>
 <body>
-<h2>Comparación del SH Approach entre</h2>
+<h2>Comparación del enfoque de jerarquía de sonoridad entre</h2>
 <ol><li>test/org/sil/syllableparser/testData/CVTestData.ashedata</li>
 <li>test/org/sil/syllableparser/testData/CVTestData.ashedata</li>
 </ol>
@@ -37,8 +37,8 @@
 <p>Ambos tienen las mismas clases naturales de grafemas.</p>
 <h3>Entornos</h3>
 <p>Ambos tienen los mismos entornos.</p>
-<h3>Sonority Hierarchy</h3>
-<p>Both have the same sonority hierarchy.</p>
+<h3>Jerarquía de sonoridad</h3>
+<p>Ambos tienen la misma jerarquía de sonoridad.</p>
 <h3>Palabras</h3>
 <p>Ambos tienen las mismas palabras con las mismas sílabas.</p>
 </body>
