Fix bug in compare: order could change but report did not reflect it

--- a/test/org/sil/syllableparser/testData/SHApproachLanguageComparisonSameHTMLEnglish.html
+++ b/test/org/sil/syllableparser/testData/SHApproachLanguageComparisonSameHTMLEnglish.html
@@ -38,7 +38,7 @@
 <h3>Environments</h3>
 <p>Both have the same set of environments.</p>
 <h3>Sonority Hierarchy</h3>
-<p>Both have the same sonority hierarchy.</p>
+<p>Both have the same set of natural classes in the sonority hierarchy.</p>
 <h3>Words</h3>
 <p>Both have the same words with the same syllables.</p>
 </body>
