--- a/test/org/sil/syllableparser/testData/SHApproachLanguageComparisonSameHTMLSpanish.html
+++ b/test/org/sil/syllableparser/testData/SHApproachLanguageComparisonSameHTMLSpanish.html
@@ -38,7 +38,7 @@
 <h3>Entornos</h3>
 <p>Ambos tienen los mismos entornos.</p>
 <h3>Jerarquía de sonoridad</h3>
-<p>Ambos tienen la misma jerarquía de sonoridad.</p>
+<p>Ambos tienen el mismo conjunto de clases naturales en la jerarquía de sonoridad.</p>
 <h3>Palabras</h3>
 <p>Ambos tienen las mismas palabras con las mismas sílabas.</p>
 </body>
