Add filters and templates to comparisons for ONC approach Refactor CVNaturalClasses so use common code for CV and ONC comparisons

--- a/test/org/sil/syllableparser/testData/ONCApproachLanguageComparisonHTMLEnglish.html
+++ b/test/org/sil/syllableparser/testData/ONCApproachLanguageComparisonHTMLEnglish.html
@@ -1139,6 +1139,158 @@
 </tr>
 </tbody>
 </table>
+<h3>Natural Classes</h3>
+<p>Both have the same natural classes.</p>
+<h3>Templates</h3>
+<p>The following templates differ between the two. </p>
+<table border="1">
+<thead>
+<tr>
+<th>First</th>
+<th>Second</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td class="analysis1">Coda template [Coda] (x y z)</td>
+<td class="analysis2">Coda template [Coda] ([C] ([C]) ([C]))</td>
+</tr>
+<tr>
+<td class="analysis1">Nucleus template [Nucleus] ([V] ([V]) ([V]))</td>
+<td class="analysis2">&#xa0;</td>
+</tr>
+<tr>
+<td class="analysis1">Onset template [Onset] (p t k b d g)</td>
+<td class="analysis2">&#xa0;</td>
+</tr>
+<tr>
+<td class="analysis1">Syllable template [Syllable] (([C]) ([C]) [V] ([C]) ([C]))</td>
+<td class="analysis2">&#xa0;</td>
+</tr>
+<tr>
+<td class="analysis1">&#xa0;</td>
+<td class="analysis2">Word fianl appendix [Word final] (s x t)</td>
+</tr>
+<tr>
+<td class="analysis1">Word final appendix 1 [Word final] (s x t)</td>
+<td class="analysis2">&#xa0;</td>
+</tr>
+<tr>
+<td class="analysis1">Word final appendix 2 [Word final] (z y x)</td>
+<td class="analysis2">&#xa0;</td>
+</tr>
+<tr>
+<td class="analysis1">Word Initial [Word initial] (s t r)</td>
+<td class="analysis2">&#xa0;</td>
+</tr>
+<tr>
+<td class="analysis1">&#xa0;</td>
+<td class="analysis2">Word initial [Word initial] (s t r)</td>
+</tr>
+</tbody>
+</table>
+<p>The order of the templates is shown below.</p>
+<table border="1">
+<thead>
+<tr>
+<th>First</th>
+<th>Second</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td class="analysis1">Word Initial [Word initial] (s t r)</td>
+<td class="analysis2">Word initial [Word initial] (s t r)</td>
+</tr>
+<tr>
+<td class="analysis1">Nucleus template [Nucleus] ([V] ([V]) ([V]))</td>
+<td class="analysis2">Coda template [Coda] ([C] ([C]) ([C]))</td>
+</tr>
+<tr>
+<td class="analysis1">Coda template [Coda] (x y z)</td>
+<td class="analysis2">Rime template [Rime] ([V] ([V]) ([V]) [C] ([C]) ([C]))</td>
+</tr>
+<tr>
+<td class="analysis1">Word final appendix 1 [Word final] (s x t)</td>
+<td class="analysis2">Word fianl appendix [Word final] (s x t)</td>
+</tr>
+<tr>
+<td class="analysis1">Word final appendix 2 [Word final] (z y x)</td>
+<td class="analysis2">&#xa0;</td>
+</tr>
+<tr>
+<td class="analysis1">Onset template [Onset] (p t k b d g)</td>
+<td class="analysis2">&#xa0;</td>
+</tr>
+<tr>
+<td class="analysis1">Rime template [Rime] ([V] ([V]) ([V]) [C] ([C]) ([C]))</td>
+<td class="analysis2">&#xa0;</td>
+</tr>
+<tr>
+<td class="analysis1">Syllable template [Syllable] (([C]) ([C]) [V] ([C]) ([C]))</td>
+<td class="analysis2">&#xa0;</td>
+</tr>
+</tbody>
+</table>
+<h3>Filters</h3>
+<p>The following filters differ between the two.</p>
+<table border="1">
+<thead>
+<tr>
+<th>First</th>
+<th>Second</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td class="analysis1">Coda {Repair} [Coda] (t d b k | p)</td>
+<td class="analysis2">Coda {Fail} [Coda] (s a e i o u)</td>
+</tr>
+<tr>
+<td class="analysis1">&#xa0;</td>
+<td class="analysis2">Nucleus repair {Repair} [Nucleus] (x [V] t s d | i)</td>
+</tr>
+<tr>
+<td class="analysis1">Onset repair {Repair} [Onset] (s d g h t | l)</td>
+<td class="analysis2">Onset repair {Repair} [Onset] (s d g h t | l h)</td>
+</tr>
+<tr>
+<td class="analysis1">Coda fail {Fail} [Syllable] (d d d d)</td>
+<td class="analysis2">&#xa0;</td>
+</tr>
+<tr>
+<td class="analysis1">Syllable fail {Fail} [Syllable] (s a e i o u)</td>
+<td class="analysis2">&#xa0;</td>
+</tr>
+</tbody>
+</table>
+<p>The order of the filters is shown below.</p>
+<table border="1">
+<thead>
+<tr>
+<th>First</th>
+<th>Second</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td class="analysis1">Onset repair {Repair} [Onset] (s d g h t | l)</td>
+<td class="analysis2">Onset repair {Repair} [Onset] (s d g h t | l h)</td>
+</tr>
+<tr>
+<td class="analysis1">Coda {Repair} [Coda] (t d b k | p)</td>
+<td class="analysis2">Coda {Fail} [Coda] (s a e i o u)</td>
+</tr>
+<tr>
+<td class="analysis1">Syllable fail {Fail} [Syllable] (s a e i o u)</td>
+<td class="analysis2">Nucleus repair {Repair} [Nucleus] (x [V] t s d | i)</td>
+</tr>
+<tr>
+<td class="analysis1">Coda fail {Fail} [Syllable] (d d d d)</td>
+<td class="analysis2">&#xa0;</td>
+</tr>
+</tbody>
+</table>
 <h3>Words</h3>
 <p>The following words differ between the two.</p>
 <table border="1">
