--- a/test/org/sil/syllableparser/testData/ONCApproachLanguageComparisonHTMLSpanish.html
+++ b/test/org/sil/syllableparser/testData/ONCApproachLanguageComparisonHTMLSpanish.html
@@ -1139,6 +1139,158 @@
 </tr>
 </tbody>
 </table>
+<h3>Clases Naturales</h3>
+<p>Ambos tienen las mismas clases naturales.</p>
+<h3>Plantillas</h3>
+<p>Las siguientes plantillas difieren entre las dos. </p>
+<table border="1">
+<thead>
+<tr>
+<th>Primero</th>
+<th>Segundo</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td class="analysis1">Coda template [Coda] (x y z)</td>
+<td class="analysis2">Coda template [Coda] ([C] ([C]) ([C]))</td>
+</tr>
+<tr>
+<td class="analysis1">Nucleus template [Nucleus] ([V] ([V]) ([V]))</td>
+<td class="analysis2">&#xa0;</td>
+</tr>
+<tr>
+<td class="analysis1">Onset template [Onset] (p t k b d g)</td>
+<td class="analysis2">&#xa0;</td>
+</tr>
+<tr>
+<td class="analysis1">Syllable template [Syllable] (([C]) ([C]) [V] ([C]) ([C]))</td>
+<td class="analysis2">&#xa0;</td>
+</tr>
+<tr>
+<td class="analysis1">&#xa0;</td>
+<td class="analysis2">Word fianl appendix [Word final] (s x t)</td>
+</tr>
+<tr>
+<td class="analysis1">Word final appendix 1 [Word final] (s x t)</td>
+<td class="analysis2">&#xa0;</td>
+</tr>
+<tr>
+<td class="analysis1">Word final appendix 2 [Word final] (z y x)</td>
+<td class="analysis2">&#xa0;</td>
+</tr>
+<tr>
+<td class="analysis1">Word Initial [Word initial] (s t r)</td>
+<td class="analysis2">&#xa0;</td>
+</tr>
+<tr>
+<td class="analysis1">&#xa0;</td>
+<td class="analysis2">Word initial [Word initial] (s t r)</td>
+</tr>
+</tbody>
+</table>
+<p>El orden de las plantillas se muestra a continuación.</p>
+<table border="1">
+<thead>
+<tr>
+<th>Primero</th>
+<th>Segundo</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td class="analysis1">Word Initial [Word initial] (s t r)</td>
+<td class="analysis2">Word initial [Word initial] (s t r)</td>
+</tr>
+<tr>
+<td class="analysis1">Nucleus template [Nucleus] ([V] ([V]) ([V]))</td>
+<td class="analysis2">Coda template [Coda] ([C] ([C]) ([C]))</td>
+</tr>
+<tr>
+<td class="analysis1">Coda template [Coda] (x y z)</td>
+<td class="analysis2">Rime template [Rime] ([V] ([V]) ([V]) [C] ([C]) ([C]))</td>
+</tr>
+<tr>
+<td class="analysis1">Word final appendix 1 [Word final] (s x t)</td>
+<td class="analysis2">Word fianl appendix [Word final] (s x t)</td>
+</tr>
+<tr>
+<td class="analysis1">Word final appendix 2 [Word final] (z y x)</td>
+<td class="analysis2">&#xa0;</td>
+</tr>
+<tr>
+<td class="analysis1">Onset template [Onset] (p t k b d g)</td>
+<td class="analysis2">&#xa0;</td>
+</tr>
+<tr>
+<td class="analysis1">Rime template [Rime] ([V] ([V]) ([V]) [C] ([C]) ([C]))</td>
+<td class="analysis2">&#xa0;</td>
+</tr>
+<tr>
+<td class="analysis1">Syllable template [Syllable] (([C]) ([C]) [V] ([C]) ([C]))</td>
+<td class="analysis2">&#xa0;</td>
+</tr>
+</tbody>
+</table>
+<h3>Filtros</h3>
+<p>Los siguientes filtros difieren entre los dos. </p>
+<table border="1">
+<thead>
+<tr>
+<th>Primero</th>
+<th>Segundo</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td class="analysis1">Coda {Reparar} [Coda] (t d b k | p)</td>
+<td class="analysis2">Coda {Fallar} [Coda] (s a e i o u)</td>
+</tr>
+<tr>
+<td class="analysis1">&#xa0;</td>
+<td class="analysis2">Nucleus repair {Reparar} [Nucleus] (x [V] t s d | i)</td>
+</tr>
+<tr>
+<td class="analysis1">Onset repair {Reparar} [Onset] (s d g h t | l)</td>
+<td class="analysis2">Onset repair {Reparar} [Onset] (s d g h t | l h)</td>
+</tr>
+<tr>
+<td class="analysis1">Coda fail {Fallar} [Syllable] (d d d d)</td>
+<td class="analysis2">&#xa0;</td>
+</tr>
+<tr>
+<td class="analysis1">Syllable fail {Fallar} [Syllable] (s a e i o u)</td>
+<td class="analysis2">&#xa0;</td>
+</tr>
+</tbody>
+</table>
+<p>El orden de los filtros se muestra a continuación.</p>
+<table border="1">
+<thead>
+<tr>
+<th>Primero</th>
+<th>Segundo</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td class="analysis1">Onset repair {Reparar} [Onset] (s d g h t | l)</td>
+<td class="analysis2">Onset repair {Reparar} [Onset] (s d g h t | l h)</td>
+</tr>
+<tr>
+<td class="analysis1">Coda {Reparar} [Coda] (t d b k | p)</td>
+<td class="analysis2">Coda {Fallar} [Coda] (s a e i o u)</td>
+</tr>
+<tr>
+<td class="analysis1">Syllable fail {Fallar} [Syllable] (s a e i o u)</td>
+<td class="analysis2">Nucleus repair {Reparar} [Nucleus] (x [V] t s d | i)</td>
+</tr>
+<tr>
+<td class="analysis1">Coda fail {Fallar} [Syllable] (d d d d)</td>
+<td class="analysis2">&#xa0;</td>
+</tr>
+</tbody>
+</table>
 <h3>Palabras</h3>
 <p>Las siguientes palabras son diferentes entre los dos.</p>
 <table border="1">
