--- a/test/org/sil/syllableparser/testData/ONCApproachLanguageComparisonSameHTMLEnglish.html
+++ b/test/org/sil/syllableparser/testData/ONCApproachLanguageComparisonSameHTMLEnglish.html
@@ -43,6 +43,12 @@
 <p>Codas allowed is the same.</p>
 <p>Onset maximization is the same.</p>
 <p>The onset principle is the same.</p>
+<h3>Natural Classes</h3>
+<p>Both have the same natural classes.</p>
+<h3>Templates</h3>
+<p>Both have the same templates.</p>
+<h3>Filters</h3>
+<p>Both have the same filters.</p>
 <h3>Words</h3>
 <p>Both have the same words with the same syllables.</p>
 </body>
