--- a/test/org/sil/syllableparser/testData/ONCApproachLanguageComparisonSameHTMLSpanish.html
+++ b/test/org/sil/syllableparser/testData/ONCApproachLanguageComparisonSameHTMLSpanish.html
@@ -43,6 +43,12 @@
 <p>Codas permitidas son las mismas.</p>
 <p>La maximización de inicio es la misma.</p>
 <p>El principio de inicio es el mismo.</p>
+<h3>Clases Naturales</h3>
+<p>Ambos tienen las mismas clases naturales.</p>
+<h3>Plantillas</h3>
+<p>Ambos tienen las mismas plantillas.</p>
+<h3>Filtros</h3>
+<p>Ambos tienen los mismos filtros.</p>
 <h3>Palabras</h3>
 <p>Ambos tienen las mismas palabras con las mismas sílabas.</p>
 </body>
