Get color, font and node orientation to work in the comparisons

--- a/test/org/sil/syllableparser/testData/CVApproachLanguageComparisonHTMLEnglish.html
+++ b/test/org/sil/syllableparser/testData/CVApproachLanguageComparisonHTMLEnglish.html
@@ -7,21 +7,25 @@
 	font-family:System;
 	font-size:12.0;
 	font-style:Regular;
+	color:#000000;
 }
 .analysis2 {
 	font-family:Times New Roman;
 	font-size:12.0;
 	font-style:Regular;
+	color:#000000;
 }
 .vernacular1 {
 	font-family:System;
 	font-size:12.0;
 	font-style:Regular;
+	color:#4d3399;
 }
 .vernacular2 {
 	font-family:Charis SIL;
 	font-size:12.0;
 	font-style:Regular;
+	color:#4d3399;
 }
 </style>
 </head>
