Add moraic approach to syllabifications comparison.

--- a/test/org/sil/syllableparser/testData/SyllabificationComparisonCVSHHTMLSpanish.html
+++ b/test/org/sil/syllableparser/testData/SyllabificationComparisonCVSHHTMLSpanish.html
@@ -33,7 +33,7 @@
 <h2>Comparación de los enfoques a la Sillabificación</h2>
 <div>Presentado en 24 de enero de 2019 8:07</div>
 <h3>Silabaciones</h3>
-<p>Las siguientes palabras tienen diferentes sílabas.</p>
+<p>Las siguientes palabras tienen diferentes sílabas.  El número de palabras que difieren es 2.134.</p>
 <p/>
 <table>
 <tbody>
