--- a/test/org/sil/syllableparser/testData/SyllabificationComparisonCVSHHTMLEnglish.html
+++ b/test/org/sil/syllableparser/testData/SyllabificationComparisonCVSHHTMLEnglish.html
@@ -33,7 +33,7 @@
 <h2>Comparison of Approaches to Syllabification</h2>
 <div>Performed on January 24, 2019 8:07 AM</div>
 <h3>Syllabifications</h3>
-<p>The following words have different syllabifications.</p>
+<p>The following words have different syllabifications.  The number of words which differ is 2,134.</p>
 <p/>
 <table>
 <tbody>
