--- a/test/org/sil/syllableparser/testData/MoraicApproachLanguageComparisonHTMLSpanish.html
+++ b/test/org/sil/syllableparser/testData/MoraicApproachLanguageComparisonHTMLSpanish.html
@@ -1404,16 +1404,16 @@
 <td class="analysis2">Coda {Fallar} [Coda] (s a e i o u)</td>
 </tr>
 <tr>
+<td class="analysis1">Coda fail {Fallar} [Coda] (d d d d)</td>
+<td class="analysis2">&#xa0;</td>
+</tr>
+<tr>
 <td class="analysis1">&#xa0;</td>
 <td class="analysis2">Nucleus repair {Reparar} [Nucleus] (x [V] t s d | i)</td>
 </tr>
 <tr>
 <td class="analysis1">Onset repair {Reparar} [Onset] (s d g h t | l)</td>
 <td class="analysis2">Onset repair {Reparar} [Onset] (s d g h t | l h)</td>
-</tr>
-<tr>
-<td class="analysis1">Coda fail {Fallar} [Syllable] (d d d d)</td>
-<td class="analysis2">&#xa0;</td>
 </tr>
 <tr>
 <td class="analysis1">Syllable fail {Fallar} [Syllable] (s a e i o u)</td>
@@ -1443,7 +1443,7 @@
 <td class="analysis2">Nucleus repair {Reparar} [Nucleus] (x [V] t s d | i)</td>
 </tr>
 <tr>
-<td class="analysis1">Coda fail {Fallar} [Syllable] (d d d d)</td>
+<td class="analysis1">Coda fail {Fallar} [Coda] (d d d d)</td>
 <td class="analysis2">&#xa0;</td>
 </tr>
 </tbody>
