--- a/test/org/sil/syllableparser/testData/ONCApproachLanguageComparisonHTMLEnglish.html
+++ b/test/org/sil/syllableparser/testData/ONCApproachLanguageComparisonHTMLEnglish.html
@@ -1538,16 +1538,16 @@
 <td class="analysis2">Coda {Fail} [Coda] (s a e i o u)</td>
 </tr>
 <tr>
+<td class="analysis1">Coda fail {Fail} [Coda] (d d d d)</td>
+<td class="analysis2">&#xa0;</td>
+</tr>
+<tr>
 <td class="analysis1">&#xa0;</td>
 <td class="analysis2">Nucleus repair {Repair} [Nucleus] (x [V] t s d | i)</td>
 </tr>
 <tr>
 <td class="analysis1">Onset repair {Repair} [Onset] (s d g h t | l)</td>
 <td class="analysis2">Onset repair {Repair} [Onset] (s d g h t | l h)</td>
-</tr>
-<tr>
-<td class="analysis1">Coda fail {Fail} [Syllable] (d d d d)</td>
-<td class="analysis2">&#xa0;</td>
 </tr>
 <tr>
 <td class="analysis1">Syllable fail {Fail} [Syllable] (s a e i o u)</td>
@@ -1577,7 +1577,7 @@
 <td class="analysis2">Nucleus repair {Repair} [Nucleus] (x [V] t s d | i)</td>
 </tr>
 <tr>
-<td class="analysis1">Coda fail {Fail} [Syllable] (d d d d)</td>
+<td class="analysis1">Coda fail {Fail} [Coda] (d d d d)</td>
 <td class="analysis2">&#xa0;</td>
 </tr>
 </tbody>
