Fix bug: OT comparison did not include CV natural classes

--- a/test/org/sil/syllableparser/testData/OTApproachLanguageComparisonHTMLEnglish.html
+++ b/test/org/sil/syllableparser/testData/OTApproachLanguageComparisonHTMLEnglish.html
@@ -1273,6 +1273,8 @@
 </tr>
 </tbody>
 </table>
+<h3>Natural Classes</h3>
+<p>Both have the same natural classes.</p>
 <h3>Grapheme Natural Classes</h3>
 <p>The following grapheme natural classes differ between the two.</p>
 <table border="1">
