--- a/test/org/sil/syllableparser/testData/OTApproachLanguageComparisonHTMLSpanish.html
+++ b/test/org/sil/syllableparser/testData/OTApproachLanguageComparisonHTMLSpanish.html
@@ -1273,6 +1273,8 @@
 </tr>
 </tbody>
 </table>
+<h3>Clases Naturales</h3>
+<p>Ambos tienen las mismas clases naturales.</p>
 <h3>Clases Naturales de Grafemas</h3>
 <p>Las siguientes clases naturales de grafemas difieren entre los dos.</p>
 <table border="1">
