--- a/test/org/sil/syllableparser/testData/OTApproachLanguageComparisonSameHTMLEnglish.html
+++ b/test/org/sil/syllableparser/testData/OTApproachLanguageComparisonSameHTMLEnglish.html
@@ -37,6 +37,8 @@
 <div>Performed on April 9, 2016 8:07 AM</div>
 <h3>Segment Inventory</h3>
 <p>Both have the same segment inventory.</p>
+<h3>Natural Classes</h3>
+<p>Both have the same natural classes.</p>
 <h3>Grapheme Natural Classes</h3>
 <p>Both have the same set of grapheme natural classes.</p>
 <h3>Environments</h3>
